# PUPPET

./: .gitignore  README.md
experimental/analysis/: note.ipynb  pyproject.toml  run_jupyterlab.sh
experimental/dpo/: pyproject.toml  run_training.sh  training.py
experimental/dpo/configs/: ielts_llama3_lrx100_drstd_5000.yaml  ielts_qwen3_lrx100_drstd_5000.yaml  longform_qa_llama3_lrx100_drstd_5000.yaml  longform_qa_qwen3_lrx100_drstd_5000.yaml  multinews_llama3_lrx100_drstd_5000.yaml  multinews_qwen3_lrx100_drstd_5000.yaml
experimental/dpo/configs/different_sizes/: ielts_qwen3_14b_lrx100_drstd_5000.yaml  ielts_qwen3_4b_lrx100_drstd_5000.yaml  longform_qa_qwen3_14b_lrx100_drstd_5000.yaml  longform_qa_qwen3_4b_lrx100_drstd_5000.yaml  multinews_qwen3_14b_lrx100_drstd_5000.yaml  multinews_qwen3_4b_lrx100_drstd_5000.yaml
experimental/dpo/configs/either_score/: ielts_llama3_lrx100_drstd_5000_detector_score_only.yaml  ielts_llama3_lrx100_drstd_5000_evaluator_score_only.yaml  ielts_qwen3_lrx100_drstd_5000_detector_score_only.yaml  ielts_qwen3_lrx100_drstd_5000_evaluator_score_only.yaml  longform_qa_llama3_lrx100_drstd_5000_detector_score_only.yaml  longform_qa_llama3_lrx100_drstd_5000_evaluator_score_only.yaml  longform_qa_qwen3_lrx100_drstd_5000_detector_score_only.yaml  longform_qa_qwen3_lrx100_drstd_5000_evaluator_score_only.yaml  multinews_llama3_lrx100_drstd_5000_detector_score_only.yaml  multinews_llama3_lrx100_drstd_5000_evaluator_score_only.yaml  multinews_qwen3_lrx100_drstd_5000_detector_score_only.yaml  multinews_qwen3_lrx100_drstd_5000_evaluator_score_only.yaml
experimental/evaluation/: evaluation.py  pyproject.toml  run_evaluation.sh
experimental/evaluation/configs/human/: ielts_human.yaml  ielts_human_paraphrased.yaml  longform_qa_human.yaml  longform_qa_human_paraphrased.yaml  multi_news_human.yaml  multi_news_human_paraphrased.yaml
experimental/evaluation/materials/llm_as_a_judge_prompts/: .gitignore
experimental/evaluation/materials/utils/: .gitignore  __init__.py
experimental/paraphrase/: paraphrase.py  pyproject.toml  run_paraphrase.sh
experimental/paraphrase/configs/ours/: ielts_vllm_llama3_dpo_longform_qa_lrx100_drstd_5000.yaml  ielts_vllm_llama3_dpo_lrx100_drstd_5000.yaml  ielts_vllm_llama3_dpo_multinews_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_dpo_longform_qa_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_dpo_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_dpo_multinews_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_ielts_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_multinews_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_ielts_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_multinews_lrx100_drstd_5000.yaml  multinews_vllm_llama3_dpo_ielts_lrx100_drstd_5000.yaml  multinews_vllm_llama3_dpo_longform_qa_lrx100_drstd_5000.yaml  multinews_vllm_llama3_dpo_lrx100_drstd_5000.yaml  multinews_vllm_qwen3_dpo_ielts_lrx100_drstd_5000.yaml  multinews_vllm_qwen3_dpo_longform_qa_lrx100_drstd_5000.yaml  multinews_vllm_qwen3_dpo_lrx100_drstd_5000.yaml
experimental/shap_analysis/: note.ipynb  pyproject.toml  run_shap_analysis.sh  shap_analysis.py
experimental/shap_analysis/configs/: ielts_dpo_llama3.yaml  ielts_vanila_llama3.yaml  logform_qa_dpo_llama3.yaml  logform_qa_vanila_llama3.yaml
experimental/vllm_gen/: generation.py  pyproject.toml  run_generation.sh
experimental/vllm_gen/configs/llama3/: ielts_llama3_dpo_baseline.yaml  ielts_vllm_llama3_dpo_longform_qa_lrx100_drstd_5000.yaml  ielts_vllm_llama3_dpo_lrx100_drstd_5000.yaml  ielts_vllm_llama3_dpo_multinews_lrx100_drstd_5000.yaml  ielts_vllm_llama3_random_5000.yaml  longform_qa_llama3_dpo_baseline.yaml  longform_qa_vllm_llama3_dpo_ielts_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_multinews_lrx100_drstd_5000.yaml  longform_qa_vllm_llama3_dpo_outfox_lrx100_drstd_5000.yaml  multi_news_llama3_dpo_baseline.yaml  multi_news_vllm_llama3_dpo_ielts_lrx100_drstd_5000.yaml  multi_news_vllm_llama3_dpo_longform_qa_lrx100_drstd_5000.yaml  multi_news_vllm_llama3_dpo_lrx100_drstd_5000.yaml  multi_news_vllm_llama3_dpo_outfox_lrx100_drstd_5000.yaml  multi_news_vllm_llama3_random_5000.yaml
experimental/vllm_gen/configs/qwen3/: ielts_qwen3_dpo_baseline.yaml  ielts_vllm_qwen3_dpo_longform_qa_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_dpo_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_dpo_multinews_lrx100_drstd_5000.yaml  ielts_vllm_qwen3_random_5000.yaml  longform_qa_vllm_qwen3_dpo_baseline.yaml  longform_qa_vllm_qwen3_dpo_ielts_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_multinews_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_dpo_outfox_lrx100_drstd_5000.yaml  longform_qa_vllm_qwen3_random_5000.yaml  multi_news_vllm_qwen3_dpo_baseline.yaml  multi_news_vllm_qwen3_dpo_ielts_lrx100_drstd_5000.yaml  (+4 more)
experimental/watermark_det/: detection.py  pyproject.toml  run_detection.sh
scripts/2_build_dataset/: 1_get_base_dataset.py  2_sample_llm_responses.py  3_build_dpo_dataset.py  pyproject.toml
scripts/2_build_dataset/1_base_dataset/: config.yaml
scripts/2_build_dataset/2_llm_responses/: config.yaml
scripts/2_build_dataset/3_dpo_dataset/: config.yaml
scripts/3_train_model/: 1_train_model.py  pyproject.toml
scripts/3_train_model/1_train_model/: config.yaml
scripts/4_evaluate_trained_model/: 1_setup.py  2_sample_llm_responses.py  3_evaluate.py  pyproject.toml
scripts/4_evaluate_trained_model/1_setup/: config.yaml
scripts/4_evaluate_trained_model/2_llm_responses/: config.yaml
scripts/4_evaluate_trained_model/3_evaluate/: config.yaml
(+825 files in other folders)
