[project]
name = "evaluate-trained-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets<4.0.0",
    "nltk",
    "pandas",
    "pyyaml",
    "rouge",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers<5.0.0",
    "vllm>=0.11.0,<0.20.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
